--- a/.gitignore
+++ b/.gitignore
@@ -14,7 +14,7 @@
 chrome-profiler-events*.json
 speed-measure-plugin*.json
 
-# IDEs and editors
+# idEs and editors
 /.idea
 .project
 .classpath
@@ -23,7 +23,7 @@ speed-measure-plugin*.json
 .settings/
 *.sublime-workspace
 
-# IDE - VSCode
+# idE - VSCode
 .vscode/*
 !.vscode/settings.json
 !.vscode/tasks.json
